kubectl-deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: pact-broker
  namespace: pact-broker-prod
spec:
  ports:
  - port: 80
    name: http
    targetPort: 9292
  selector:
    app: pact-broker
