kubectl-deploy/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pact-broker
  namespace: pact-broker-prod
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: >
      51.149.250.0/24,
      217.33.148.210/32,
      81.134.202.29/32,
      18.130.148.126/32,
      18.169.147.172/32,
      35.176.93.186/32,
      35.176.148.126/32,
      128.77.75.64/26,
      213.121.161.112/28,
      194.33.192.0/25,
      194.33.196.0/25,
      35.178.209.113/32,
      3.8.51.207/32,
      35.177.252.54/32,
      3.228.39.90/32,
      18.213.67.41/32,
      34.194.94.201/32,
      34.194.144.202/32,
      34.197.6.234/32,
      35.169.17.173/32,
      35.174.253.146/32,
      52.3.128.216/32,
      52.4.195.249/32,
      52.5.58.121/32,
      52.21.153.129/32,
      52.72.72.233/32,
      54.92.235.88/32,
      54.161.182.76/32,
      54.164.161.41/32,
      54.166.105.113/32,
      54.167.72.230/32,
      54.172.26.132/32,
      54.205.138.102/32,
      54.208.72.234/32,
      54.209.115.53/32
    external-dns.alpha.kubernetes.io/set-identifier: "pact-broker-pact-broker-prod-green"
    external-dns.alpha.kubernetes.io/aws-weight: "100"
spec:
  ingressClassName: default
  tls:
  - hosts:
    - pact-broker-prod.apps.live-1.cloud-platform.service.justice.gov.uk
  rules:
  - host: pact-broker-prod.apps.live-1.cloud-platform.service.justice.gov.uk
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: pact-broker
            port:
              number: 80
